@@ -11,6 +11,7 @@ SimGrid (3.3.2-svn) unstable; urgency=low
     => kill now useless network_card concept
     - Use dynar to represent routes (instead of void** + int*)
     - kill link_set (use surf_network_model->resource_set instead)
+    - Add a command-line option to choose the routing schema to use
 
   * Simplify model declaration
     (less redirections, less function to write when defining a model)
